# robotics_project

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yaml  ros_entrypoint.sh
report/: report.tex
robotics/: CMakeLists.txt  package.xml
robotics/launch/: robotics.launch  simulation.launch
robotics/scripts/: http_api.py
robotics_bringup/: CMakeLists.txt  package.xml
robotics_bringup/config/: ekf.yaml  imu.yaml  localization.yaml  witmotion_imu.yaml
robotics_bringup/launch/: robotics_base.launch  robotics_bringup.launch
robotics_bringup/rviz/: local.rviz  sensors.rviz
robotics_bringup/src/: odom_covariance_node.cpp
robotics_description/: CMakeLists.txt  package.xml
robotics_description/launch/: description.launch  display.launch
robotics_description/rviz/: display.rviz
robotics_description/urdf/: cmp10a.urdf.xacro  hokuyo.urdf.xacro  materials.urdf.xacro  robot.urdf.xacro
robotics_gazebo_sim/: CMakeLists.txt  package.xml  sim.rviz
robotics_gazebo_sim/launch/: empty_world.launch  playpen.launch  spawn_robotics.launch
robotics_navigation/: CMakeLists.txt  package.xml
robotics_navigation/config/: costmap_common.yaml  gmapping.yaml  planner.yaml  slam_toolbox.yaml
robotics_navigation/launch/: mapping.launch  move_base.launch  navigation.launch  slam_toolbox.launch
robotics_navigation/rviz/: navigation.rviz
