<?xml version="1.0"?>
<package format="2">
    <name>robotics_bringup</name>
    <version>0.0.0</version>
    <description>Robot hardware bringup for robotics final project</description>
    <author email="jet22854111@gmail.com">QuantumSpanwer</author>
    <maintainer email="jet22854111@gmail.com">QuantumSpanwer</maintainer>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- general dependencies -->
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    
    <!-- execute dependencies -->
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>rviz_imu_plugin</exec_depend>

    <exec_depend>realsense2_camera</exec_depend>
    <exec_depend>urg_node</exec_depend>

    <exec_depend>scout_base</exec_depend>

    <exec_depend>robotics_description</exec_depend>

    <export>
    </export>
</package>
