<?xml version="1.0"?>
<package format="2">
    <name>robotics_description</name>
    <version>0.0.0</version>
    <description>Robot description for robotics final project</description>
    <author email="jet22854111@gmail.com">QuantumSpanwer</author>
    <maintainer email="jet22854111@gmail.com">QuantumSpanwer</maintainer>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- execute dependencies -->
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <exec_depend>realsense_gazebo_description</exec_depend>
    <exec_depend>urg_node</exec_depend>

    <exec_depend>scout_description</exec_depend>

    <export>
    </export>
</package>
