<?xml version="1.0"?>
<package format="2">
    <name>robotics_gazebo_sim</name>
    <version>0.0.0</version>
    <description>Gazebo simulation for robotics final project</description>
    <author email="jet22854111@gmail.com">QuantumSpanwer</author>
    <maintainer email="jet22854111@gmail.com">QuantumSpanwer</maintainer>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- execute dependencies -->
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>ros_control</exec_depend>
    <exec_depend>ros_controllers</exec_depend>

    <exec_depend>scout_gazebo_sim</exec_depend>

    <exec_depend>robotics_bringup</exec_depend>
    <exec_depend>robotics_description</exec_depend>

    <export>
    </export>
</package>
