<?xml version="1.0"?>
<package format="2">
    <name>robotics_navigation</name>
    <version>0.0.0</version>
    <description>Robot navigation for robotics final project</description>
    <author email="jet22854111@gmail.com">QuantumSpanwer</author>
    <maintainer email="jet22854111@gmail.com">QuantumSpanwer</maintainer>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- general dependencies -->
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    
    <!-- execute dependencies -->
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>

    <exec_depend>robotics_bringup</exec_depend>

    <export>
    </export>
</package>
